@@ -95,7 +95,7 @@ use warnings;
 use 5.014;
 use utf8;
 
-our $VERSION = '3.00';
+our $VERSION = '3.01';
 
 # Most of these have been adapted from
 # <https://github.com/public-transport/transport-apis> and
